--- a/locales/nl.json
+++ b/locales/nl.json
@@ -1,5 +1,9 @@
 {
   "today": "Vandaag",
   "tomorrow": "Morgen",
-  "nextHours": "Komende uren"
+  "nextHours": "Komende uren",
+  "repair": {
+    "warningtitle": "LET OP",
+    "warningtext": "Je staat op het punt om het bron-apparaat te wijzigen. Alle inzichten en flows blijven bewaard. Maar als het nieuwe bronapparaat een andere meterstand heeft, zul je handmatig de meter en geld startwaarden moeten aanpassen in de apparaat instellingen."
+  }
 }
