--- a/locales/en.json
+++ b/locales/en.json
@@ -15,5 +15,9 @@
   "error_device_corrupt": "Device is corrupt!",
   "error_no_prices": "No prices available",
   "error_no_price_interval": "No price interval available",
-  "error_homey_api_not_ready": "Homey API not ready"
+  "error_homey_api_not_ready": "Homey API not ready",
+  "repair": {
+    "warningtitle": "WARNING",
+    "warningtext": "You are about to change the source device. This will keep all insights and flows. But if the new source device has a different meter value, you will need to manually compensate the meter and money start values in the advanced settings."
+  }
 }
