--- a/locales/ru.json
+++ b/locales/ru.json
@@ -15,5 +15,9 @@
   "error_device_corrupt": "Устройство повреждено!",
   "error_no_prices": "Цены недоступны",
   "error_no_price_interval": "Интервал цен недоступен",
-  "error_homey_api_not_ready": "API Homey не готов"
+  "error_homey_api_not_ready": "API Homey не готов",
+  "repair": {
+    "warningtitle": "ПРЕДУПРЕЖДЕНИЕ",
+    "warningtext": "Вы собираетесь изменить исходное устройство. Это сохранит все данные и потоки. Но если у нового исходного устройства другие показания счетчика, вы должны вручную компенсировать начальные значения счетчика и денег в расширенных настройках."
+  }
 }
